# do-it-dl

./: .gitignore  chapter1-4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb  chapter8.ipynb  pyproject.toml  requirements.txt
