[project]
name = "do-it"
version = "0.1.0"
description = "do-it-dl practice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "ruff>=0.15.14",
    "scikit-learn>=1.8.0",
    "tensorflow>=2.21.0",
    "torch>=2.12.0",
    "torchinfo>=1.8.0",
    "tqdm>=4.68.2",
]
